# sync-theater

./: Cargo.toml  LICENSE.md  README.md  Trunk.toml
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/app/: mod.rs  yt_api.rs
youtube-player-api/: Cargo.toml  index.html  player-old.js
youtube-player-api/examples/typescript/: index.html  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.cjs  webpack.config.js
youtube-player-api/src/: lib.rs  wrapper.rs
youtube-player-api/src/wrapper/: api.rs  mod.rs  player_events.rs  player_options.rs  player_state.rs
youtube-player-npm/: Cargo.toml
youtube-player-npm/src/: lib.rs
