[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wee_alloc"]
full = ["wee_alloc", "stack_trace"]
wee_alloc = ["dep:wee_alloc"]
stack_trace = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version="0.1.7", optional=true }
gloo = "0.7.0"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wee_alloc = { version="0.4.5", optional=true }
yew = "0.19.3"
yew-interop = { git="https://github.com/Madoshakalaka/yew-interop.git", branch="master", features=["yew-stable", "script"] }
yew-router = "0.16.0"
youtube-player-api = { path = "../youtube-player-api", default-features=false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = 'abort'
