[package]
name = "youtube-player-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["wee_alloc"]
full = ["wee_alloc", "std"]
wee_alloc = ["dep:wee_alloc"]
std = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version="0.1.7", optional=true }
hashbrown = "0.12.1"
js-sys = "0.3.57"
serde = { version = "1.0.137", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wee_alloc = { version="0.4.5", optional=true }

[dependencies.web-sys]
version = "0.3.57"
features = [
    "console",
    "Document",
    # "DomImplementation",
    "Element",
    "HtmlCollection",
    # "HtmlBodyElement",
    # "HtmlElement",
    # "HtmlHeadElement",
    # "Node",
    "Window"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = 'abort'
